Fixed a few bugs
Most of the problem is with external data.  Need to improve that.

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -92,7 +92,7 @@ NHTS.person <- with(PERV2PUB,{
                     data.frame(HOUSEID = HOUSEID,
                                PERSONID = PERSONID,
                                SEX = as.factor(ifelse(R_SEX=="1", "M", ifelse(R_SEX=="2", "F", NA))),
-                               AGE = as.factor(convertToAgeClass(R_AGE)),
+                               AGE = as.factor(ITHIM:::convertToAgeClass(R_AGE)),
                                MSA = ifelse(MSASIZE %in% 1:5, TRUE, FALSE),
                                HHSTATE = as.character(HHSTATE),
                                HHS = as.character(convertToHHS(as.character(HHSTATE))), stringsAsFactors = FALSE
@@ -120,7 +120,7 @@ saveRDS(NHTS, file = "./data/NHTS.rds")
 ```
 
 ```{r loadNHTS, eval = !compute}
-NHTS <- readRDS(file = "./data/NHTS.rds")
+NHTS <- readRDS(file = "~/GHI/R/data/NHTS.rds")
 ```
 
 #### Compute National Metro Average
@@ -187,9 +187,9 @@ p + geom_bar(stat = "identity") + scale_y_log10() + labs(y = "Sample Size (Refer
 ## Non-Travel METs
 
 ```{r newMETs, echo = TRUE, eval = TRUE, echo = FALSE}
-newMETsFile <- "ATUS_to_METS_key.csv"
+newMETsFile <- "~/GHI/data/ATUS_to_METS_key.csv"
 
-newMETsFile <- system.file(newMETsFile, package="ITHIM")
+#newMETsFile <- system.file(newMETsFile, package="ITHIM")
 
 newMETs <- read.csv(file = newMETsFile, stringsAsFactors = FALSE, colClasses = c("character","character","character","character","numeric","character","character","character"))
 dataColumns <- c(1,5)
@@ -301,7 +301,7 @@ gbdParse <- function(gbd){
   return(gbdListTemp2)
 }
 
-gbdRDS <-  readRDS(file = "./data/stateMetroBurdens2014.rds")
+gbdRDS <-  readRDS(file = "~/GHI/R/data/stateMetroBurdens2014.rds")
 gbdRDS <- within(gbdRDS, state <- stateNameToAbbrev(state))
 
 
