A few tweaks to ITHIM.Rmd

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -33,7 +33,7 @@ First we use NHTS to estimate mean walking and cycling times.
 
 ```{r compute, echo = FALSE, eval = TRUE}
 date()
-compute <- TRUE
+compute <- FALSE
 ```
 
 #### Create a handful of functions to help parse data
@@ -388,7 +388,6 @@ ITHIMListScenario <- lapply(ITHIMList, function(ithim) update(ithim, list(muwt =
 
 deltaDALYList <- mapply(deltaBurden, ITHIMList, ITHIMListScenario)
 
-
 getDALY <- function( ITHIM ){
 foo <- data.frame(lapply(ITHIM@parameters@GBD, function(x) x$M$daly + x$F$daly))
 sum(foo[,names(foo) %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD")])
@@ -409,7 +408,7 @@ D <- melt(foo)
 cbPalette <- c("#0072B2", "#56B4E9", "#999999", "#E69F00", "#009E73", "#F0E442", "#D55E00", "#CC79A7")
 
 p <- ggplot(D, aes(state, value/1e3, fill = variable))
-p + geom_bar(stat= "identity") + scale_x_discrete(name="") + scale_y_continuous(name="Thousands of DALYs") + guides(fill=FALSE) + scale_fill_manual(values=cbPalette) + theme(axis.text.y  = element_text(size = 16)) + theme(axis.text.x  = element_text(size = 16), axis.title.x  = element_text(size = 16)) + coord_flip() # + coord_cartesian(ylim = c(175, 600))
+p + geom_bar(stat= "identity") + scale_x_discrete(name="") + scale_y_continuous(name="Thousands of DALYs") + guides(fill=FALSE) + scale_fill_manual(values=cbPalette) + theme(axis.text.y  = element_text(size = 16)) + theme(axis.text.x  = element_text(size = 16), axis.title.x  = element_text(size = 16)) + coord_flip()
 ```
 
 
@@ -417,8 +416,9 @@ p + geom_bar(stat= "identity") + scale_x_discrete(name="") + scale_y_continuous(
 
 D <- rbind(data.frame(getWalkTime(ITHIMList[["MI"]]),state = "MI"), data.frame(getWalkTime(ITHIMList[["WI"]]),state = "WI"), data.frame(getWalkTime(ITHIMList[["OH"]]),state = "OH"))
 
-p <- ggplot(subset(D, ageClass != "ageClass1"), aes(x = ageClass, y = mu, fill = state)) + geom_bar(stat= "identity", position = "dodge")
+p <- ggplot(subset(D, ageClass != "ageClass1"), aes(x = ageClass, y = mean, fill = state)) + geom_bar(stat= "identity", position = "dodge")
 p + theme_bw() + facet_grid( . ~ sex) + scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="Time Walking per Week (minutes)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + scale_fill_manual(values=cbPalette[-3])
+
 ```
 
 ### Visualization of trip time matrices
@@ -460,7 +460,7 @@ ITHIM.national <- update(ITHIM.national, list(muNonTravel = 10))
 
 ITHIM.CA <- ITHIMList[["CA"]]
 ITHIM.CA <- update(ITHIM.CA, list(muNonTravel = 10))
-foo1 <- compareModels(ITHIM.national,ITHIM.CA)
+foo1 <- ITHIM:::compareModels(ITHIM.national,ITHIM.CA)
 foobar1 <- data.frame(cbind(melt(foo1$daly.delta),paste0("ageClass",1:8)),State = "CA")
 
 foobar <- foobar1
@@ -470,7 +470,7 @@ names(foobar) <- c("delta.DALY","Sex","Disease","ageClass","State")
 
 ITHIM.NY <- ITHIMList[["NY"]]
 ITHIM.NY <- update(ITHIM.NY, list(muNonTravel = 10))
-foo2 <- compareModels(ITHIM.national,ITHIM.NY)
+foo2 <- ITHIM:::compareModels(ITHIM.national,ITHIM.NY)
 foobar2 <- data.frame(cbind(melt(foo2$daly.delta),paste0("ageClass",1:8)),State = "NY")
 foobar <- rbind(foobar1,foobar2)
 names(foobar) <- c("delta.DALY","Sex","Disease","ageClass","State")
@@ -621,7 +621,7 @@ foobar <- data.frame()
 
 for( state1 in state1Vec ){
     for( state2 in state2Vec ){
-        foo <- data.frame(lapply(compareModels(ITHIMList[[state1]],ITHIMList[[state2]])$daly.delta, function(x) sum(x$M + x$F)*prop), baseline = state1, scenario = state2)
+        foo <- data.frame(lapply(ITHIM:::compareModels(ITHIMList[[state1]],ITHIMList[[state2]])$daly.delta, function(x) sum(x$M + x$F)*prop), baseline = state1, scenario = state2)
         foobar <- rbind(foobar,foo)
     }
 }
