--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -533,6 +533,10 @@ p + geom_bar(stat="identity", position = "dodge") + scale_x_discrete(name="", la
 ITHIM.default <- update(ITHIM.default, list(quantiles = (1:99)/100))
 
 ITHIM.national <- ITHIM.default
+
+RwtNational[1,] <- c(1e-6,1e-6)
+RctNational[1,] <- c(1e-6,1e-6)
+
 ITHIM.national <- update(ITHIM.national, list(muwt = muwtNational, muct = muctNational,Rwt = RwtNational,Rct = RctNational))
 
 saveRDS(ITHIM.national, file = "./data/ITHIM.national.rds")
@@ -585,26 +589,31 @@ ITHIM.national <- update(ITHIM.national, list(muNonTravel = 10))
 D <- rbind(getWalkTime(ITHIM.national),getCycleTime(ITHIM.national),getNonTravelMETs(ITHIM.national))
 D <- within(D, sex <- factor(sex, levels = c("F","M")))
 
-p <- ggplot(D, aes(x = ageClass, y = mu, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
+p <- ggplot(D, aes(x = ageClass, y = mean, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
 p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + facet_grid( type ~ ., scales = "free")
 ```
 
 ## Figure 3
 
 ```{r displayGBD, eval = TRUE, dev=c('pdf', 'png'), fig.width = 1.2*fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = FALSE}
+
 D <- melt(ITHIM.national@parameters@GBD)
-names(D) <- c("disease","sex","ageClass","type","burden", "sex2", "disease2")
+
+D <- getGBD(ITHIM.national)
+
+names(D) <- c("disease","sex","ageClass","type","burden")
 D <- within(D, sex <- factor(sex, levels = c("F","M")))
 
 p <- ggplot(subset(D, disease %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD") & type == "daly"), aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
+
 p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs Nationwide (thousands)") + theme(axis.text.x  = element_text(angle = 270, vjust = 0.5, size = 8)) + facet_grid( . ~ disease, scales = "free_y")
 ```
 
 
 
 ```{r doseresponse, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
-RR1vec <- unique(unlist(createActiveTransportRRs()))
-lapply(createActiveTransportRRs(),function(x) lapply(x, function(x) unique(c(x))))
+RR1vec <- unique(unlist(ITHIM:::createActiveTransportRRs()))
+lapply(ITHIM:::createActiveTransportRRs(),function(x) lapply(x, function(x) unique(c(x))))
 #~~~~~~~~~~~~~~~~~~~~~~~
 # Manual bull$%#@!
 #~~~~~~~~~~~~~~~~~~~~~~~
