--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -25,101 +25,7 @@ fig.width <- 6 # inches
 phi <- (1+sqrt(5))/2 # the golden ratio ;)
 ```
 
-## HHS Metro Region Parameter Sets
-
-First we use NHTS to estimate mean walking and cycling times.
-
-### NHTS
-
-```{r compute, echo = FALSE, eval = TRUE}
-date()
-compute <- FALSE
-```
-
-#### Create a handful of functions to help parse data
-
-```{r parsely, eval = TRUE, echo = FALSE}
-convertToHHS <- function(states){
-  HHSRegions <- matrix(c("CT","ME","MA","NH","RI","VT","NJ","NY","DE","DC","MD","PA","VA","WV","AL","FL","GA","KY","MS","NC","SC","TN","IL","IN","MI","MN","OH","WI","AR","LA","NM","OK","TX","IA","KS","MO","NE","CO","MT","ND","SD","UT","WY","AZ","CA","HI","NV","AK","ID","OR","WA",1,1,1,1,1,1,2,2,3,3,3,3,3,3,4,4,4,4,4,4,4,4,5,5,5,5,5,5,6,6,6,6,6,7,7,7,7,8,8,8,8,8,8,9,9,9,9,10,10,10,10,"HHS01","HHS01","HHS01","HHS01","HHS01","HHS01","HHS02","HHS02","HHS03","HHS03","HHS03","HHS03","HHS03","HHS03","HHS04","HHS04","HHS04","HHS04","HHS04","HHS04","HHS04","HHS04","HHS05","HHS05","HHS05","HHS05","HHS05","HHS05","HHS06","HHS06","HHS06","HHS06","HHS06","HHS07","HHS07","HHS07","HHS07","HHS08","HHS08","HHS08","HHS08","HHS08","HHS08","HHS09","HHS09","HHS09","HHS09","HHS10","HHS10","HHS10","HHS10"), nrow = 51, ncol = 3)
-  StateToHHS <- HHSRegions[,3]
-  names(StateToHHS) <- HHSRegions[,1]
-  return(StateToHHS[states])
-}
-
-countPeople <- function(data){
- nrow(data %>% group_by(HOUSEID, PERSONID) %>% dplyr::summarize(n()))
-}
-
-tripTime <- function(data, mode = "walk"){
- return(sum(subset(data, AT == mode)$TRVL_MIN, na.rm = TRUE))
-}
-
-reformatData <- function(data){
-foo <- matrix(unlist(data), nrow = 7, ncol = 2)
-foo <- rbind( c(0, 0), foo)
-dimnames(foo) <- list(paste0("ageClass",1:8), c("F","M"))
-return(foo[,c("M","F")])
-}
-
-```
-
-#### Read Two of the Four NHTS Data Tables
-
-```{r NHTS, eval = compute, echo = FALSE}
-DAYV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/DAYV2PUB.CSV", na.strings = c("-9","-8", "-7", "-1"))
-names(DAYV2PUB) <- c("HOUSEID","PERSONID","FRSTHM","OUTOFTWN","ONTD_P1","ONTD_P2","ONTD_P3","ONTD_P4","ONTD_P5","ONTD_P6","ONTD_P7","ONTD_P8","ONTD_P9","ONTD_P10","ONTD_P11","ONTD_P12","ONTD_P13","ONTD_P14","ONTD_P15","TDCASEID","HH_HISP","HH_RACE","DRIVER","R_SEX","WORKER","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","FLAG100","LIF_CYC","TRIPPURP","AWAYHOME","CDIVMSAR","CENSUS_D","CENSUS_R","DROP_PRK","DRVR_FLG","EDUC","ENDTIME","HH_ONTD","HHMEMDRV","HHRESP","HHSTATE","HHSTFIPS","INTSTATE","MSACAT","MSASIZE","NONHHCNT","NUMONTRP","PAYTOLL","PRMACT","PROXY","PSGR_FLG","R_AGE","RAIL","STRTTIME","TRACC1","TRACC2","TRACC3","TRACC4","TRACC5","TRACCTM","TRAVDAY","TREGR1","TREGR2","TREGR3","TREGR4","TREGR5","TREGRTM","TRPACCMP","TRPHHACC","TRPHHVEH","TRPTRANS","TRVL_MIN","TRVLCMIN","TRWAITTM","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","VEHID","WHODROVE","WHYFROM","WHYTO","WHYTRP1S","WRKCOUNT","DWELTIME","WHYTRP90","TDTRPNUM","TDWKND","TDAYDATE","TRPMILES","WTTRDFIN","VMT_MILE","PUBTRANS","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","GASPRICE","VEHTYPE","HH_CBSA","HHC_MSA")
-
-NHTS.trips <- with(DAYV2PUB,{
-    data.frame(HOUSEID = HOUSEID,
-                   PERSONID = PERSONID,
-                   TDCASEID = TDCASEID,
-                   AT = ifelse(TRPTRANS == "22", "cycle",
-                        ifelse(TRPTRANS == "23", "walk",
-                        ifelse(!is.na(TRPTRANS), "other", NA))),
-                   TRVL_MIN = as.numeric(TRVL_MIN),
-                   #TRVLCMIN = as.numeric(TRVLCMIN),
-                   URBRUR  = as.factor(URBRUR),
-                   MSACAT = as.factor(MSACAT),
-                   MSA = ifelse(MSASIZE %in% 1:5, TRUE, FALSE),
-                   TRPTRANS = as.factor(TRPTRANS),
-                   TRPMILES = as.numeric(TRPMILES)
-)})
-
-PERV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/PERV2PUB.CSV", na.strings = "-9")
-names(PERV2PUB) <- c("HOUSEID","PERSONID","VARSTRAT","WTPERFIN","SFWGT","HH_HISP","HH_RACE","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","WRKCOUNT","FLAG100","LIF_CYC","CNTTDTR","BORNINUS","CARRODE","CDIVMSAR","CENSUS_D","CENSUS_R","CONDNIGH","CONDPUB","CONDRIDE","CONDRIVE","CONDSPEC","CONDTAX","CONDTRAV","DELIVER","DIARY","DISTTOSC","DRIVER","DTACDT","DTCONJ","DTCOST","DTRAGE","DTRAN","DTWALK","EDUC","EVERDROV","FLEXTIME","FMSCSIZE","FRSTHM","FXDWKPL","GCDWORK","GRADE","GT1JBLWK","HHRESP","HHSTATE","HHSTFIPS","ISSUE","OCCAT","LSTTRDAY","MCUSED","MEDCOND","MEDCOND6","MOROFTEN","MSACAT","MSASIZE","NBIKETRP","NWALKTRP","OUTCNTRY","OUTOFTWN","PAYPROF","PRMACT","PROXY","PTUSED","PURCHASE","R_AGE","R_RELAT","R_SEX","RAIL","SAMEPLC","SCHCARE","SCHCRIM","SCHDIST","SCHSPD","SCHTRAF","SCHTRN1","SCHTRN2","SCHTYP","SCHWTHR","SELF_EMP","TIMETOSC","TIMETOWK","TOSCSIZE","TRAVDAY","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","WEBUSE","WKFMHMXX","WKFTPT","WKRMHM","WKSTFIPS","WORKER","WRKTIME","WRKTRANS","YEARMILE","YRMLCAP","YRTOUS","DISTTOWK","TDAYDATE","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","HH_CBSA","HHC_MSA")
-
-NHTS.person <- with(PERV2PUB,{
-                    data.frame(HOUSEID = HOUSEID,
-                               PERSONID = PERSONID,
-                               SEX = as.factor(ifelse(R_SEX=="1", "M", ifelse(R_SEX=="2", "F", NA))),
-                               AGE = as.factor(ITHIM:::convertToAgeClass(R_AGE)),
-                               MSA = ifelse(MSASIZE %in% 1:5, TRUE, FALSE),
-                               HHSTATE = as.character(HHSTATE),
-                               HHS = as.character(convertToHHS(as.character(HHSTATE))), stringsAsFactors = FALSE
-
-)
-})
-
-```
-
-#### Subset and Merge
-
-We now correct for zero trip times in NHTS.
-
-```{r subset, eval = compute, fig.width = 10, echo = FALSE}
-NHTS.person <- subset( NHTS.person, MSA == TRUE )
-NHTS.trips <- subset(NHTS.trips, !is.na(TRVL_MIN))
-
-NHTS <- merge(NHTS.person, NHTS.trips, by = c("HOUSEID","PERSONID"), all.x = TRUE)
-NHTS <- within(NHTS, TRVL_MIN <- ifelse(is.na(TRVL_MIN), 0, TRVL_MIN))
-saveRDS(NHTS, file = "./data/NHTS.rds")
-
-
-# write.csv(with(NHTS,data.frame(HOUSEID, PERSONID, SEX, AGE, MODE = AT, TRVL_MIN, TRPMILES)), file = "./misc/NHTS.csv", quote = FALSE, row.names = FALSE)
-
-```
-
-```{r loadNHTS, eval = !compute}
+```{r loadNHTS, eval = TRUE}
 NHTS <- readRDS(file = "~/GHI/R/data/NHTS.rds")
 ```
 
@@ -152,7 +58,8 @@ rm("listOfLists","counts","walkLength","cycleLength","countMatrix","walkMatrix",
 #### Compute Mean Trip Lengths
 
 ```{r count, eval = TRUE, echo = FALSE}
-listOfLists <- lapply(split(NHTS, NHTS$HHSTATE),function(x) lapply(split(x, x$SEX), function(x) split(x, x$AGE)))
+listOfLists <- lapply(split(NHTS, NHTS$MSA_ID),function(x) lapply(split(x, x$SEX), function(x) split(x, x$AGE)))
+#listOfLists <- lapply(split(NHTS, NHTS$HHSTATE),function(x) lapply(split(x, x$SEX), function(x) split(x, x$AGE)))
 counts <- lapply(listOfLists, function(x) lapply(x, function(x) lapply(x, countPeople)))
 walkLength <- lapply(listOfLists, function(x) lapply(x, function(x) lapply( x, tripTime, mode = "walk")))
 cycleLength <- lapply(listOfLists, function(x) lapply(x, function(x) lapply( x, tripTime, mode = "cycle")))
@@ -181,7 +88,7 @@ foo <- lapply( countMatrix, function(x) c(x) )
 foo <- melt(foo)
 names(foo) <- c("sampleSize", "state")
 p <- ggplot(foo, aes( x = state, y = sampleSize))
-p + geom_bar(stat = "identity") + scale_y_log10() + labs(y = "Sample Size (Referent Group)", x = "State") + theme_bw()
+p + geom_bar(stat = "identity") + labs(y = "Sample Size (Referent Group)", x = "State") + theme_bw()
 ```
 
 ## Non-Travel METs
