--- a/R/NHTS.Rmd
+++ b/R/NHTS.Rmd
@@ -37,8 +37,6 @@ date()
 compute <- TRUE
 ```
 
-#### Create a handful of functions to help parse data
-
 ```{r parsely, eval = TRUE, echo = FALSE}
 convertToHHS <- function(states){
   HHSRegions <- matrix(c("CT","ME","MA","NH","RI","VT","NJ","NY","DE","DC","MD","PA","VA","WV","AL","FL","GA","KY","MS","NC","SC","TN","IL","IN","MI","MN","OH","WI","AR","LA","NM","OK","TX","IA","KS","MO","NE","CO","MT","ND","SD","UT","WY","AZ","CA","HI","NV","AK","ID","OR","WA",1,1,1,1,1,1,2,2,3,3,3,3,3,3,4,4,4,4,4,4,4,4,5,5,5,5,5,5,6,6,6,6,6,7,7,7,7,8,8,8,8,8,8,9,9,9,9,10,10,10,10,"HHS01","HHS01","HHS01","HHS01","HHS01","HHS01","HHS02","HHS02","HHS03","HHS03","HHS03","HHS03","HHS03","HHS03","HHS04","HHS04","HHS04","HHS04","HHS04","HHS04","HHS04","HHS04","HHS05","HHS05","HHS05","HHS05","HHS05","HHS05","HHS06","HHS06","HHS06","HHS06","HHS06","HHS07","HHS07","HHS07","HHS07","HHS08","HHS08","HHS08","HHS08","HHS08","HHS08","HHS09","HHS09","HHS09","HHS09","HHS10","HHS10","HHS10","HHS10"), nrow = 51, ncol = 3)
@@ -78,7 +76,6 @@ NHTS.trips <- with(DAYV2PUB,{
                         ifelse(TRPTRANS == "23", "walk",
                         ifelse(!is.na(TRPTRANS), "other", NA))),
                    TRVL_MIN = as.numeric(TRVL_MIN),
-                   #TRVLCMIN = as.numeric(TRVLCMIN),
                    URBRUR  = as.factor(URBRUR),
                    MSACAT = as.factor(MSACAT),
                    MSA = ifelse(MSASIZE %in% 1:5, TRUE, FALSE),
@@ -102,23 +99,44 @@ NHTS.person <- with(PERV2PUB,{
 
 ```
 
-#### Subset and Merge
+#### Create TravelSurvey Object
 
-We now correct for zero trip times in NHTS.
 
-```{r subset, eval = compute, fig.width = 10, echo = FALSE}
 
-NHTS.person <- subset( NHTS.person, MSA == TRUE )
-NHTS.trips <- subset(NHTS.trips, !is.na(TRVL_MIN))
+```{r TravelSurvey, eval = compute, fig.width = 10, echo = FALSE}
 
-#saveRDS(NHTS.person, file = "./data/NHTS.person.rds")
-#saveRDS(NHTS.trips, file = "./data/NHTS.trips.rds")
+person.df <- with(NHTS.person,{
+    data.frame(houseID=HOUSEID, subjectID=PERSONID, sex = SEX, age = AGE, location = MSA_ID)
+    })
 
-NHTS <- merge(NHTS.person, NHTS.trips, by = c("HOUSEID","PERSONID"), all.x = TRUE)
-NHTS <- within(NHTS, TRVL_MIN <- ifelse(is.na(TRVL_MIN), 0, TRVL_MIN))
-saveRDS(NHTS, file = "./data/NHTS.rds")
+trip.df <- with(NHTS.trips,{
+    data.frame(houseID=HOUSEID, subjectID=PERSONID, duration = TRVL_MIN, mode = AT)
+})
 
-```{r msaMatrix, eval = compute, fig.width = 10, echo = FALSE}
+person.df <- subset(person.df,apply(person.df,MARGIN=1,FUN=function(x)all(!is.na(x))))
+trip.df <- subset(trip.df,apply(trip.df,MARGIN=1,FUN=function(x)all(!is.na(x))))
+
+NHTS.TravelSurvey <- new("TravelSurvey", person = person.df, trip = trip.df)
+
+saveRDS(NHTS.TravelSurvey, file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
+```
+
+```{r TravelSurvey2, eval = compute, fig.width = 10, echo = FALSE}
+NHTS.TravelSurvey <- readRDS(file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
+
+NHTS.df <- dplyr::left_join(NHTS.TravelSurvey@person, NHTS.TravelSurvey@trip, by = c("houseID","subjectID"))
+
+NHTS.df <- within(NHTS.df, duration <- ifelse(is.na(duration), 0, duration))
+
+
+```
+
+
+
+
+
+
+```{r msaMatrix, eval = FALSE, fig.width = 10, echo = FALSE}
 msaMatrix <- matrix(c(5602,4472,1922,7320,3120,6200,3362,7362,5720,4992,8872,
 8280,7240,0640,6922,5960,3600,0520,8960,3480,1602,6840,
 1280,1520,5360,6640,1122,5082,6162,2162,4920,7602,6480,
@@ -127,27 +145,14 @@ msaMatrix <- matrix(c(5602,4472,1922,7320,3120,6200,3362,7362,5720,4992,8872,
 "NY/NJ Metro","Los Angeles-Riverside-Orange County","Dallas-Fort Worth","San Diego","Greensboro-Winston Salem", "Phoenix/Mesa","Houston-Galveston-Brazoria", "San Francisco-Oakland-San Jose", "Norfolk-Virginia Beach", "Miami-Ft. Lauderdale", "Washington-Baltimore", rep("no label yet", 38)), ncol = 2)
 ```
 
-```{r TravelSurvey, eval = compute, fig.width = 10, echo = FALSE}
+```{r foob, eval = FALSE, echo = FALSE}
+#NHTS.person <- subset( NHTS.person, MSA == TRUE )
+#NHTS.trips <- subset(NHTS.trips, !is.na(TRVL_MIN))
 
-person.df <- with(NHTS.person,{
-    data.frame(houseID=HOUSEID, subjectID=PERSONID, sex = SEX, age = AGE, location = HHS)
-    })
+#saveRDS(NHTS.person, file = "./data/NHTS.person.rds")
+#saveRDS(NHTS.trips, file = "./data/NHTS.trips.rds")
 
-
-trip.df <- with(NHTS.trips,{
-    data.frame(houseID=HOUSEID, subjectID=PERSONID, duration = TRVL_MIN, mode = AT)
-})
-
-
-person.df <- subset(person.df,apply(person.df,MARGIN=1,FUN=function(x)all(!is.na(x))))
-trip.df <- subset(trip.df,apply(trip.df,MARGIN=1,FUN=function(x)all(!is.na(x))))
-
-NHTS.TravelSurvey <- new("TravelSurvey", person = person.df, trip = trip.df)
-saveRDS(NHTS.TravelSurvey, file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
-
-NHTS.df <- dplyr::left_join(NHTS.TravelSurvey@person, NHTS.TravelSurvey@trip, by = c("houseID","subjectID"))
-
-NHTS.df <- within(NHTS.df, duration <- ifelse(is.na(duration), 0, duration))
-
-
+#NHTS <- merge(NHTS.person, NHTS.trips, by = c("HOUSEID","PERSONID"), all.x = TRUE)
+#NHTS <- within(NHTS, TRVL_MIN <- ifelse(is.na(TRVL_MIN), 0, TRVL_MIN))
+#saveRDS(NHTS, file = "./data/NHTS.rds")
 ```
